--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,57 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Tomás Berriel Martins
     - name: Languages
-      value: English, German
-
-- title: Education
-  type: time_table
-  contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+      value: Spanish, Italian, English
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Predoctoral researcher
+      institution: University of Zaragoza, Zaragoza, Spain
+      year: 2022 - 
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - I am working on the application of Computer Vision and Representation Learning algorithms for Spatial AI. I aim to disentangle the properties of the elements on a scene to improve the generalization capabilities of current semantic SLAM algorithms. 
+
+    - title: Research Assistant
+      institution: University of Zaragoza, Zaragoza, Spain
+      year: 2020 - 2022
       description:
-        - Description 1.
-        - Description 2.
+        - Worked with Javier Civera on the use of Bayesian Neural Networks for uncertainty prediction in 360º images' layout estimation. 
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Robotics Research & Development junior Engineer
+      institution: ITAINNOVA, Zaragoza, Spain
+      year: 2019 - 2020
       description:
+        - I was part of the Mecatronic division, a multidisciplinary team which developed solutions for autonomous systems. I helped developing and integrating software for different autonomous tasks, including deploying perception algorithms to detect and avoid dynamic obstacles, and integrating GPS information into the localization estimation. I also worked on writing documentation, and acting as support for the client.
+        - As my first working experience I was lucky to be sourrounded by experienced and knowledgeble engineers. I learned the importance of project development and tracking, testing, documentation, and overall, appropriate communication skills and team dynamics.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Education
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+    - title: Master in Robotics, Graphics, and Computer Vision (MRGCV)
+      institution: University of Zaragoza, Zaragoza, Spain
+      year: 2020 - 2022
+      description:
+        - Multidisciplinary master which covered light transimissions and scene renderings, multiview geometry, autonomous robots navigation and planning, Simultaneous Localization and Mapping, and also computer architectures. It has been a pleasure to learn from renown experts from the Robotics Pereception and Real Time Group, the Graphics and Imaging Lab, and the Computer Architecture Group.
+        - My master's thesis, 'Learning disentangled representations of scenes from images', studied the use of transfer learning as bias to reduce the computational cost of a State of the Art model for unsupervised semantic disentanglement learning of 2D synthetic scenes.
+    - title: Bachelor of Science in Electronics and Automatic Control Engineering
+      institution: University of Zaragoza, Zaragoza, Spain
+      year: 2015 - 2019
+      description:
+        - With a great importance to both digital and analogic electronic devices, and engineering control theory, the bachelor also covered other industrial fields like fluid dynamics, mechanics, and thermodynamcis and heat transmission. On the last year I took specialization courses on Autonomous Robots and Computer Vision.
+        - My bachelor's thesis, 'Automated human actions recognition in 3D video sequences', focused on the study of Long Short Term Memory neural networks for classification of RGB-D sequences of human actions.
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Artificial intelligence
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - Disentangled representation learning
+        - Causal inference
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Trekking, dancing, eating delicious foods, travelling, and several others.
