Changed 'about', added remved cv page

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,7 +13,7 @@
       institution: University of Zaragoza, Zaragoza, Spain
       year: 2022 - 
       description:
-        - I am working on the application of Computer Vision and Representation Learning algorithms for Spatial AI. I aim to disentangle the properties of the elements on a scene to improve the generalization capabilities of current semantic SLAM algorithms. 
+        - I am working on the application of Computer Vision and Representation Learning algorithms for Spatial AI.
 
     - title: Research Assistant
       institution: University of Zaragoza, Zaragoza, Spain
