Updated publications and added preview picture

--- a/_config.yml
+++ b/_config.yml
@@ -238,7 +238,7 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will
 scholar:
 
   last_name: [Berriel Martins]
-  first_name: [Tomás]
+  first_name: [T.]
 
   style: apa
   locale: en
