Fixed coauthors names

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,7 @@
 "Civera":
-  - firstname: ["Javier", "E.", "E. P.", "Edwin Plimpton"]
+  - firstname: ["Javier"]
     url: https://scholar.google.com/citations?user=j_sMzokAAAAJ&hl=en
+
+"Oswald":
+  - firstname: ["Martin"]
+    url: https://scholar.google.com/citations?user=biytQP8AAAAJ&hl=en
