--- a/_config.yml
+++ b/_config.yml
@@ -180,9 +180,9 @@ collections:
       layout: post
     output: true
     permalink: /news/:path/
-  projects:
-    output: true
-    permalink: /projects/:path/
+  #projects:
+  #  output: true
+  #  permalink: /projects/:path/
 
 announcements:
   enabled: true
